add the ability get user by id
