# backend/src/routes/user.ts
@@ -1,5 +1,6 @@
 import Router from "express";
 import { isAdmin } from "../middleware/is-moderator";
+import { UserField, UserModel } from "../models/user";
 import { UserRepository } from "../repositories/user";
 import { Pagination } from "../types";
 import { generateUserToDB } from "../utils/createMockData";
@@ -12,14 +13,12 @@ const userRepository = new UserRepository();
 router.post("/users/create", isAdmin, async (req, res) => {
   const { email, password } = req.body;
 
-  if (!email || !password)
-    return res.status(400).send("Email and password are required");
+  if (!email || !password) return res.status(400).send("Email and password are required");
 
   try {
     // Checking is user with this email already exist
-    const foundedUser = await userRepository.getOne({ email });
-    if (foundedUser)
-      res.status(400).send(`User with this email '${email}' is already exist`);
+    const foundedUser = await userRepository.getOne({ where: { email } });
+    if (foundedUser) res.status(400).send(`User with this email '${email}' is already exist`);
 
     // Creating new user
     const newUser = await userRepository.create(req.body);
@@ -45,6 +44,22 @@ router.get("/users", isAdmin, async (req, res) => {
 
     // Return status 200 and users back to the client
     res.status(200).send(users);
+  } catch (error) {
+    res.status(500).send(error);
+  }
+});
+
+router.get("/users/:id", isAdmin, async (req, res) => {
+  try {
+    const { id } = req.params;
+
+    const query = {
+      where: { [UserField.Uid]: id },
+    };
+
+    const user = await UserModel.findOne(query);
+
+    res.status(200).send(user);
   } catch (error) {
     res.status(500).send(error);
   }
