# backend/src/swagger/schema.json
@@ -94,6 +94,34 @@
         }
       }
     },
+    "/users/{id}": {
+      "get": {
+        "tags": ["User"],
+        "summary": "Get user by id",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "style": "simple",
+            "explode": false,
+            "schema": { "type": "string" }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/users/create": {
       "post": {
         "tags": ["User"],
@@ -302,6 +330,7 @@
           "status": { "type": "string" }
         },
         "example": {
+          "uid": "5f424125-3786-4569-a348-ffa4da7d96fc",
           "fullName": "Obi Wan Kenobi",
           "email": "ObiWanKenobi@easy-quizi.com",
           "status": "teacher"
@@ -403,10 +432,7 @@
       },
 
       "QuizDetails": {
-        "allOf": [
-          { "$ref": "#/components/schemas/Quiz" },
-          { "$ref": "#/components/schemas/CreateQuiz" }
-        ]
+        "allOf": [{ "$ref": "#/components/schemas/Quiz" }, { "$ref": "#/components/schemas/CreateQuiz" }]
       },
       "ResultRequest": {
         "type": "object",
